--- a/index.html
+++ b/index.html
@@ -14,97 +14,95 @@
   <!-- Fluid wrapper for the whole page -->
   <div class="container-fluid">
     <!-- Header row -->
-    <header class="container">
+    <header class="container functional-row">
       <div class="row page-top">
         <div class="col-md-3 d-flex align-items-center justify-content-end logo-top"><img src="img/Logo.png" alt="NortSea Logo" /img>
         </div>
-        <div class="row page-top">
-          <div class="col-md-9">
-            <div class="row d-flex align-items-center justify-content-center top-most">
-              <div class="col-md-3">
-                <i class="icon-mail"></i>
-                <a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
-              </div>
-              <div class="col-md-3">
-                <i class="icon-phone-in-talk"></i><a href="tel:+440 875369208">+440 875369208</a>
-              </div>
-              <div class="col-md-2">
-                <button type="button" class="btn btn-outline-secondary d-flex align-items-center justify-content-center log-in-box">LOG IN<i class="icon-right-open"></i></button>
-              </div>
-              <div class="col-md-2">
-                <div class="dropdown">
-                  <button class="btn btn-outline-secondary dropdown-toggle language-box" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="col-md-9 nortsea-black ">
+          <div class="row d-flex align-items-center justify-content-center top-most">
+            <div class="col-md-3 top-nav-bar">
+              <i class="icon-mail"></i>
+              <a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
+            </div>
+            <div class="col-md-3">
+              <i class="icon-phone-in-talk"></i><a href="tel:+440 875369208">+440 875369208</a>
+            </div>
+            <div class="col-md-2">
+              <button type="button" class="btn btn-outline-secondary d-flex align-items-center justify-content-center log-in-box">LOG IN<i class="icon-right-open"></i></button>
+            </div>
+            <div class="col-md-2">
+              <div class="dropdown">
+                <button class="btn btn-outline-secondary dropdown-toggle language-box" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   EN
                   </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">TR</a>
-                    <a class="dropdown-item" href="#">ES</a>
-                    <a class="dropdown-item" href="#">PT</a>
-                  </div>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">TR</a>
+                  <a class="dropdown-item" href="#">ES</a>
+                  <a class="dropdown-item" href="#">PT</a>
                 </div>
               </div>
-              <div class="col-md-2 d-flex align-items-center justify-content-center social-link-bar">
-                <a href="https://www.facebook.com/" target="_blank"><i class="icon-facebook-squared"></i></a>
-                <a href="https://twitter.com/"><i class="icon-twitter"></i></a>
-                <a href="https://www.instagram.com/"><i class="icon-instagram"></i></a>
-                <a href="mailto: info@hellohelp.com"><i class="icon-mail"></i></a>
-              </div>
             </div>
-            <!-- New nav bar made with bootstrap -->
-            <div class="row">
-              <div class="col-md-12">
-                <nav class="navbar navbar-expand-lg navbar-dark">
-                  <a class="navbar-brand" href="#"></a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="col-md-2 d-flex align-items-center justify-content-center social-link-bar">
+              <a href="https://www.facebook.com/" target="_blank"><i class="icon-facebook-squared"></i></a>
+              <a href="https://twitter.com/"><i class="icon-twitter"></i></a>
+              <a href="https://www.instagram.com/"><i class="icon-instagram"></i></a>
+              <a href="mailto: info@hellohelp.com"><i class="icon-mail"></i></a>
+            </div>
+          </div>
+          <!-- New nav bar made with bootstrap -->
+          <div class="row">
+            <div class="col-md-12">
+              <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
 
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav d-flex justify-content-between flex-auto">
-                      <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us</a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav d-flex justify-content-between flex-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="aboutus.html">About Us</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Services
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Products
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                      </li>
-                      <li>
-                        <form class="form-inline my-2 my-lg-0">
-                          <!-- <input class="form-control mr-sm-2 invisible" type="search" placeholder="Search" aria-label="Search"> -->
-                          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><i class="icon-search"></i></button>
-                        </form>
-                      </li>
-                    </ul>
-                  </div>
-                </nav>
-              </div>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                      <form class="form-inline my-2 my-lg-0">
+                        <!-- <input class="form-control mr-sm-2 invisible" type="search" placeholder="Search" aria-label="Search"> -->
+                        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><i class="icon-search"></i></button>
+                      </form>
+                    </li>
+                  </ul>
+                </div>
+              </nav>
             </div>
           </div>
         </div>
@@ -149,27 +147,27 @@
                     </a>
                 </div>
               </div>
-              <!-- Text for on top of carousel - Ask Kyle how to structure this area -->
+            <!-- Text for on top of carousel - Ask Kyle how to structure this area -->
               <h1>35% Sale</h1>
               <h2>You enter summer with refreshing rates</h2>
               <button type="button" class="btn btn-light">Explore it</button>
             </div>
           </div>
           <!-- Weather, Gallery, and Tour Column - Add links after I collect pics -->
-          <div class="col-md-1">
-            <div class="row">
-              <h1>Greece</h1>
+          <div class="col-md-1 widgets">
+            <div class="row weather-widget">
+              <h6>Greece</h6>
               <i class="icon-sun"></i>
-              <p>26°/19°</p>
+              <h5>26°/19°</h5>
               <p>Sunny</p>
             </div>
-            <div class="row">
-              <h1>Gallery</h1>
-              <i class="icon-picture"></i>
+            <div class="row gallery">
+              <h6>Gallery</h6>
+              <i class="icon-picture-2"></i>
             </div>
-            <div class="row">
-              <h1>360 Virtual Tour</h1>
-              <img src="img/panorama.svg" alt="panorama icon">
+            <div class="row tour d-flex justify-content-center align-items-center">
+              <h6>360 Virtual Tour</h6>
+              <i class="icon-panorama-horizontal"></i>
             </div>
           </div>
           <!-- Hotel/booking section - Figure out if I need two rows here or not, also what spacing to use -->
@@ -189,7 +187,7 @@
                           <div class='input-group date' id='datetimepicker1'>
                             <input type='text' class="form-control" placeholder="16.07.2015" />
                             <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"><i class="icon-calendar"></i></span>
+                                        <span class="glyphicon glyphicon-calendar"><i class="demo-icon icon-calendar"></i></span>
                             </span>
                           </div>
                         </div>
@@ -206,7 +204,7 @@
                           <div class='input-group date' id='datetimepicker1'>
                             <input type='text' class="form-control" placeholder="28.07.2015" />
                             <span class="input-group-addon">
-                                          <span class="glyphicon glyphicon-calendar"><i class="icon-calendar"></i></span>
+                                          <span class="glyphicon glyphicon-calendar"><i class="demo-icon icon-calendar"></i></span>
                             </span>
                           </div>
                         </div>
@@ -626,7 +624,7 @@
         <div class="row">
           <div class="col-md-12">
             <p class="copyright">Copyright © 2015 NortSea | <a href="aboutus.html">About NortSea</a> | <a href="support@nortsea.com" target="_blank">Contact Support</a>
-              <p class="designer">Designed by Faith34</p>
+            <p class="designer">Designed by Faith34</p>
           </div>
         </div>
       </div>
