--- a/services.html
+++ b/services.html
@@ -43,8 +43,8 @@
       </div>
       <!-- Preferences Section -->
       <div class="row page-top">
-        <div class="container">
-          <div class="row">
+        <div class="container facilities">
+          <div class="row d-flex justify-content-center">
             <h1 class="gold">Hotel Facilities</h1>
           </div>
           <div class="row">
